--- a/sass/base/_base.sass
+++ b/sass/base/_base.sass
@@ -1,3 +1,6 @@
 // -----------------------------------------------------------------------------
 // This file contains very basic styles.
 // -----------------------------------------------------------------------------
+
+body
+  padding-top: 70px
