--- a/add_teacher.pug
+++ b/add_teacher.pug
@@ -22,42 +22,16 @@ body
             li
               a(href='.') Pokaż wszystkie cytaty
 
-            li.active
+            li
               a(href='add_cite.html') Dodaj cytat
 
-            li
+            li.active
               a(href='add_teacher.html') Dodaj nauczyciela
 
   main.container
-    .alert.alert-warning
+    .alert.alert-info
       p Przepraszamy, ale ten moduł nie jest jeszcze gotowy :(
-
-    form.form-horizontal
-      .form-group
-        label.col-sm-2.control-label(for='text') Treść cytatu
-        .col-sm-10
-          textarea(placeholder="Treść", name="text", required)#text.form-control
-
-      .form-group
-        label.col-sm-2.control-label(for='teacher') Nauczyciel
-        .col-sm-10
-          select(name="teacher")#teacher.form-control
-            option 1
-            option 2
-            option 3
-
-      .form-group
-        label.col-sm-2.control-label(for='date_said') Data wypowiedzenia
-        .col-sm-10
-          input(type="date" placeholder="Data wypowiedzenia", name="date")#date.form-control
-
-      .form-group
-        .col-sm-offset-2.col-sm-10
-          button(type="submit", name="submit")#submit.btn.btn-primary Dodaj
-
-
-
 
   script(type="text/javascript", src="https://code.jquery.com/jquery-3.1.1.min.js")
   script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js', integrity='sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa', crossorigin='anonymous')
-  script(src="./dist/js/add_cite.min.js", charset="utf-8")
+  //- script(src="./dist/js/main.min.js", charset="utf-8")
