--- a/index.pug
+++ b/index.pug
@@ -26,10 +26,10 @@ body
               a(href='add_cite.html') Dodaj cytat
 
             li
-              a(href='add_teacher') Dodaj nauczyciela
+              a(href='add_teacher.html') Dodaj nauczyciela
 
   main.container
-
-  script(type="text/javascript", src="http://code.jquery.com/jquery-1.11.3.min.js")
+    
+  script(type="text/javascript", src="https://code.jquery.com/jquery-3.1.1.min.js")
   script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js', integrity='sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa', crossorigin='anonymous')
   script(src="./dist/js/main.min.js", charset="utf-8")
