Added admin panel

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -19,7 +19,7 @@
 @import layout/footer
 
 // 5. Components
-@import components/button
+@import components/quote
 
 // 6. Page-specific styles
 @import pages/home
