--- a/add_teacher.pug
+++ b/add_teacher.pug
@@ -4,7 +4,7 @@ head
   meta(name='viewport', content='width=device-width, initial-scale=1')
   title Cytaty nauczycieli &alpha;
   //- link(rel="stylesheet", href="./css/normalize.min.css")
-  link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css', integrity='sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u', crossorigin='anonymous')
+  link(rel='stylesheet', href='./css/bootstrap.min.css', integrity='sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u', crossorigin='anonymous')
   link(rel="stylesheet", href="./css/style.min.css")
 
 body
@@ -43,5 +43,5 @@ body
 
 
   script(type="text/javascript", src="https://code.jquery.com/jquery-3.1.1.min.js")
-  script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js', integrity='sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa', crossorigin='anonymous')
+  script(src='./js/bootstrap.min.js', integrity='sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa', crossorigin='anonymous')
   script(src="./dist/js/add_teacher.min.js", charset="utf-8")
