--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,28 +1,6 @@
 @charset 'UTF-8'
 
-// 1. Configuration and helpers
-@import abstracts/variables
-@import abstracts/functions
-@import abstracts/mixins
-
-// 2. Vendors
-
-
-// 3. Base stuff
 @import base/base
-@import base/fonts
-@import base/typography
 @import base/helpers
 
-// 4. Layout-related sections
-@import layout/header
-@import layout/footer
-
-// 5. Components
-@import components/quote
-
-// 6. Page-specific styles
-@import pages/home
-
-// 7. Themes
-@import themes/default
+@import pages/admin
