--- a/add_teacher.pug
+++ b/add_teacher.pug
@@ -2,6 +2,7 @@ doctype html
 head
   meta(charset="utf-8")
   meta(name='viewport', content='width=device-width, initial-scale=1')
+  link(rel='shortcut icon' type='image/x-icon' href='./favicon.ico')
   title Cytaty nauczycieli &alpha;
   //- link(rel="stylesheet", href="./css/normalize.min.css")
   link(rel='stylesheet', href='./css/bootstrap.min.css', integrity='sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u', crossorigin='anonymous')
