Changed unclear message in add_teacher

--- a/add_teacher.pug
+++ b/add_teacher.pug
@@ -32,7 +32,7 @@ body
   main.container
     form.form-horizontal
       .form-group
-        label.col-sm-2.control-label(for='text') Imię i nazwisko
+        label.col-sm-2.control-label(for='text') Imię i nazwisko nauczyciela
         .col-sm-10
           input(type="text" placeholder="Imię i nazwisko", name="name", required)#name.form-control
 
