--- a/add_cite.pug
+++ b/add_cite.pug
@@ -32,12 +32,12 @@ body
   main.container
     form.form-horizontal
       .form-group
-        label.col-sm-2.control-label(for='text') Treść cytatu
+        label.col-sm-2.control-label(for='text') Treść cytatu *
         .col-sm-10
           textarea(placeholder="Treść", name="text", required)#text.form-control
 
       .form-group
-        label.col-sm-2.control-label(for='teacher') Nauczyciel
+        label.col-sm-2.control-label(for='teacher') Nauczyciel *
         .col-sm-10
           select(name="teacher", required)#teacher.form-control
 
@@ -45,6 +45,13 @@ body
         label.col-sm-2.control-label(for='date_said') Data wypowiedzenia
         .col-sm-10
           input(type="date" placeholder="Data wypowiedzenia", name="date")#date.form-control
+
+      .form-group
+        label.col-sm-2.control-label(for='date_said') Twoje imię
+        .col-sm-10
+          input(type="text" placeholder="Twoje imie", name="name")#name.form-control
+
+      p.col-sm-2.text-right * - pola wymagane
 
       .form-group
         .col-sm-offset-2.col-sm-10
@@ -56,3 +63,11 @@ body
   script(type="text/javascript", src="https://code.jquery.com/jquery-3.1.1.min.js")
   script(src='./js/bootstrap.min.js', integrity='sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa', crossorigin='anonymous')
   script(src="./dist/js/add_cite.min.js", charset="utf-8")
+  script.
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-86197311-1', 'auto');
+    ga('send', 'pageview');
