--- a/index.pug
+++ b/index.pug
@@ -2,7 +2,6 @@ doctype html
 head
   meta(charset="utf-8")
   meta(name='viewport', content='width=device-width, initial-scale=1')
-  link(rel='shortcut icon' type='image/x-icon' href='./favicon.ico')
   title Cytaty nauczycieli &alpha;
   //- link(rel="stylesheet", href="./css/normalize.min.css")
   link(rel='stylesheet', href='./css/bootstrap.min.css', integrity='sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u', crossorigin='anonymous')
@@ -20,32 +19,20 @@ body
 
         #bs-example-navbar-collapse-1.collapse.navbar-collapse
           ul.nav.navbar-nav
-            li
+            li.active
               a(href='.') Pokaż wszystkie cytaty
 
             li
               a(href='add_cite.html') Dodaj cytat
 
-            li.active
+            li
               a(href='add_teacher.html') Dodaj nauczyciela
 
   main.container
-    form.form-horizontal
-      .form-group
-        label.col-sm-2.control-label(for='text') Imię i nazwisko nauczyciela
-        .col-sm-10
-          input(type="text" placeholder="Imię i nazwisko", name="name", required)#name.form-control
-
-      .form-group
-        .col-sm-offset-2.col-sm-10
-          button(type="submit", name="submit")#submit.btn.btn-primary Dodaj
-
-
-
 
   script(type="text/javascript", src="https://code.jquery.com/jquery-3.1.1.min.js")
   script(src='./js/bootstrap.min.js', integrity='sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa', crossorigin='anonymous')
-  script(src="./dist/js/add_teacher.min.js", charset="utf-8")
+  script(src="./dist/js/main.min.js", charset="utf-8")
   script.
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
