--- a/index.pug
+++ b/index.pug
@@ -2,37 +2,28 @@ doctype html
 head
   meta(charset="utf-8")
   meta(name='viewport', content='width=device-width, initial-scale=1')
-  title Cytaty nauczycieli &alpha;
-  //- link(rel="stylesheet", href="./css/normalize.min.css")
-  link(rel='stylesheet', href='./css/bootstrap.min.css', integrity='sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u', crossorigin='anonymous')
+  title Cytaty nauczycieli
+  link(rel="stylesheet", href="./css/normalize.min.css")
   link(rel="stylesheet", href="./css/style.min.css")
+  link(href="https://fonts.googleapis.com/icon?family=Material+Icons", rel="stylesheet")
+  meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no")
+
+  meta(name="apple-mobile-web-app-capable", content="yes")
+  meta(name="apple-mobile-web-app-status-bar-style", content="black-translucent")
+
+  link(rel="apple-touch-icon" href="./img/touch-icon-iphone.png")
+  link(rel="apple-touch-icon" sizes="76x76" href="./img/touch-icon-ipad.png")
+  link(rel="apple-touch-icon" sizes="120x120" href="./img/touch-icon-iphone-retina.png")
+  link(rel="apple-touch-icon" sizes="152x152" href="./img/touch-icon-ipad-retina.png")
+  meta(name="apple-mobile-web-app-title" content="Cytaty")
 
 body
-  nav.navbar.navbar-default.navbar-fixed-top
-    .container
-        .navbar-header
-          button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1', aria-expanded='false')
-            span.sr-only Toggle navigation
-            span.icon-bar
-            span.icon-bar
-            span.icon-bar
+  #app
 
-        #bs-example-navbar-collapse-1.collapse.navbar-collapse
-          ul.nav.navbar-nav
-            li.active
-              a(href='.') Pokaż wszystkie cytaty
-
-            li
-              a(href='add_cite.html') Dodaj cytat
-
-            li
-              a(href='add_teacher.html') Dodaj nauczyciela
-
-  main.container
-
-  script(type="text/javascript", src="https://code.jquery.com/jquery-3.1.1.min.js")
-  script(src='./js/bootstrap.min.js', integrity='sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa', crossorigin='anonymous')
-  script(src="./dist/js/main.min.js", charset="utf-8")
+  script(src="./dist/js/jquery-3.1.1.min.js", charset="utf-8")
+  script(src="./dist/js/app.min.js", charset="utf-8")
+  script(src="./dist/js/bouncefix.min.js", charset="utf-8")
+  script(src="./dist/js/script.min.js", charset="utf-8")
   script.
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
