--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,6 +1,37 @@
 @charset 'UTF-8'
 
+// 1. Configuration and helpers
+@import abstracts/variables
+@import abstracts/functions
+@import abstracts/mixins
+
+// 2. Vendors
+
+
+// 3. Base stuff
 @import base/base
+@import base/fonts
+@import base/typography
 @import base/helpers
 
-@import pages/admin
+// 4. Layout-related sections
+@import layout/footer
+
+// 5. Components
+@import components/blink
+@import components/buttons
+@import components/card
+@import components/floatingab
+@import components/header
+@import components/inputs
+@import components/settings
+@import components/snackbar
+@import components/tabs
+
+// 6. Page-specific styles
+@import pages/home
+
+// 7. Themes
+@import themes/default
+
+@import vendor/bouncefix
