Added dialog about mainpage icon

--- a/sass/abstracts/_variables.sass
+++ b/sass/abstracts/_variables.sass
@@ -21,6 +21,9 @@ $blink-big-black: rgba(0, 0, 0, 0.2)
 $button-raised-text: #fff
 $button-raised-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12)
 
+$button-flat-active: rgba(0, 0, 0, 0.15)
+$button-flat-focus: rgba(0, 0, 0, 0.1)
+
 $header-button-text: #fff
 
 $button-fab-text: #fff
@@ -56,3 +59,9 @@ $select-hover: rgba(0, 0, 0, 0.1)
 // Snackbar
 $snackbar-color: #323232
 $snackbar-text: #fff
+
+// Dialog
+$dialog-obstruct: rgba(0, 0, 0, 0.33)
+$dialog-background: #fff
+$dialog-text: #757575
+$dialog-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12)
