--- a/sass/style.sass
+++ b/sass/style.sass
@@ -21,6 +21,7 @@
 @import components/blink
 @import components/buttons
 @import components/card
+@import components/dialog
 @import components/floatingab
 @import components/header
 @import components/inputs
