--- a/sass/components/_buttons.sass
+++ b/sass/components/_buttons.sass
@@ -13,6 +13,28 @@ button.raised
   text-transform: uppercase
   box-shadow: $button-raised-box-shadow
 
+button.flat
+  min-width: 88px
+  height: 36px
+  padding: 0 8px
+  transition: background .1s ease-in-out
+  border: 0
+  border-radius: 2px
+  outline: 0
+  background: none
+  color: $main-color
+  font-size: 14px
+  font-weight: 500
+  text-transform: uppercase
+  cursor: pointer
+  appearance: none
+
+  &:active
+    background: $button-flat-active
+
+  &:focus
+    background: $button-flat-focus
+
 header nav
   button
     width: 48px
